// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Private Reducer should have a default state 1`] = `
Object {
  "showingContextMenu": false,
  "showingCountModal": false,
  "showingNBTModal": false,
}
`;

exports[`Private Reducer should toggle context menu 1`] = `
Object {
  "showingContextMenu": true,
  "showingCountModal": false,
  "showingNBTModal": false,
}
`;

exports[`Private Reducer should toggle count menu 1`] = `
Object {
  "showingContextMenu": false,
  "showingCountModal": true,
  "showingNBTModal": false,
}
`;
